send now delayed notification, separate prisma schema
