# notification-ms/api.yml
@@ -267,6 +267,13 @@ paths:
       responses:
         "200":
           description: "Success"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  notification:
+                    $ref: "#/components/schemas/NotificationForAdmin"
         "400":
           description: "Validation Error"
         "401":
@@ -360,6 +367,13 @@ paths:
       responses:
         "200":
           description: "Success"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  notification:
+                    $ref: "#/components/schemas/NotificationForAdmin"
         "400":
           description: "Validation Error"
         "401":
@@ -387,6 +401,30 @@ paths:
           description: "Unauthorized"
         "403":
           description: "Forbidden"
+        "500":
+          description: "Internal Server Error"
+  /admin/notification/{notificationId}/send-now:
+    patch:
+      tags:
+        - Admin
+      summary: Send now delayed notification by id
+      parameters:
+        - name: notificationId
+          in: path
+          required: true
+          schema:
+            type: number
+      responses:
+        "200":
+          description: "Success"
+        "400":
+          description: "Validation Error"
+        "401":
+          description: "Unauthorized"
+        "403":
+          description: "Forbidden"
+        "404":
+          description: "Not Found"
         "500":
           description: "Internal Server Error"
   /admin/notification/{notificationId}/user:
